--- a/src/HAX506X_Probabilites/cours/chapter_main.tex
+++ b/src/HAX506X_Probabilites/cours/chapter_main.tex
@@ -18,17 +18,20 @@
     \suprasection*{Chapitre 1 --- Bases de la théorie des probabilités}\label{sec:CH1}
     \addcontentsline{toc}{suprasection}{Chapitre 1 --- Bases de la théorie des probabilités}
     \setcounter{suprasection}{1}
+    \setcounter{section}{0}
     \input{../cours/chapter_1.tex}
     
     \newpage
     \suprasection*{Chapitre 2 --- Indépendance}\label{sec:CH2}
     \addcontentsline{toc}{suprasection}{Chapitre 2 --- Indépendance}
     \setcounter{suprasection}{2}
+    \setcounter{section}{0}
     \input{../cours/chapter_2.tex}
     
     \newpage
     \suprasection*{Chapitre 3 --- Loi des grands nombres}\label{sec:CH3}
     \addcontentsline{toc}{suprasection}{Chapitre 3 --- Loi des grands nombres}
     \setcounter{suprasection}{3}
+    \setcounter{section}{0}
     \input{../cours/chapter_3.tex}
 \end{document}
