--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -56,4 +56,11 @@
     \setcounter{section}{6}
     \setcounter{tdcounter}{0}
     \input{../tds/td_6.tex}
+
+    \newpage
+    \section*{TD7 --- Lemme de Borel-Cantelli et loi du 0--1}\label{TD7}
+    \addcontentsline{toc}{section}{\nameref{sec:TD7}}
+    \setcounter{section}{7}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_7.tex}
 \end{document}
