--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -58,9 +58,16 @@
     \input{../tds/td_6.tex}
 
     \newpage
-    \section*{TD7 --- Lemme de Borel-Cantelli et loi du 0--1}\label{TD7}
+    \section*{TD7 --- Lemme de Borel-Cantelli et loi du 0--1}\label{sec:TD7}
     \addcontentsline{toc}{section}{\nameref{sec:TD7}}
     \setcounter{section}{7}
     \setcounter{tdcounter}{0}
     \input{../tds/td_7.tex}
+
+    \newpage
+    \section*{TD8 --- Convergence de variables aléatoires}\label{sec:TD8}
+    \addcontentsline{toc}{section}{\nameref{sec:TD8}}
+    \setcounter{section}{8}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_8.tex}
 \end{document}
