--- a/src/HAX506X_Probabilites/cours/chapter_main.tex
+++ b/src/HAX506X_Probabilites/cours/chapter_main.tex
@@ -34,4 +34,11 @@
     \setcounter{suprasection}{3}
     \setcounter{section}{0}
     \input{../cours/chapter_3.tex}
+
+    \newpage
+    \suprasection*{Chapitre 4 --- Convergence en loi et théorème central limite}\label{sec:CH4}
+    \addcontentsline{toc}{suprasection}{Chapitre 4 --- Convergence en loi et théorème central limite}
+    \setcounter{suprasection}{4}
+    \setcounter{section}{0}
+    \input{../cours/chapter_4.tex}
 \end{document}
