--- a/src/HAX506X_Probabilites/assets/module_header.tex
+++ b/src/HAX506X_Probabilites/assets/module_header.tex
@@ -17,6 +17,12 @@
 \newcommand{\cvpn}{\underset{n\to\infty}{\cvp}}
 \newcommand{\cvlp}{{\overset{\mathcal{L}^{p}}{\longrightarrow}}}
 \newcommand{\cvlpn}{\underset{n\to\infty}{\cvlp}}
+\newcommand{\cvd}{{\overset{\mathcal{D}}{\longrightarrow}}}
+\newcommand{\cvdn}{\underset{n\to\infty}{\cvd}}
+\newcommand{\cvlaw}{{\overset{\mathcal{L}}{\longrightarrow}}}
+\newcommand{\cvlawn}{\underset{n\to\infty}{\cvlaw}}
+\newcommand{\iid}{\text{i.i.d.}}
+
 
 
 
